# CRAM

./: ArrayWrapper.cpp  CMakeLists.txt  CRAM_Manager  CRAM_Manager.cpp  LibPressio_Practice.cpp  README.md
practice/: CMakeLists.txt  LibPressio_Practice  LibPressio_Practice.cpp
